objects/BMCServiceDesk__BMC_FileSystem__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Available_Space__c</fullName>
        <label>Available Space</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Size__c</fullName>
        <label>File System Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Type__c</fullName>
        <label>File System Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>